--- a/CSS/style.css
+++ b/CSS/style.css
@@ -70,9 +70,80 @@ a {
 	font-size: 20px;
 	font-weight: bold;
 }
-.banner img {
-	width: 100%;
-	height: 500px;
+#container {
+        position: relative;
+        width: 1300px;
+        height: 400px;
+        overflow: hidden;
+    }
+#list {
+    position: absolute;
+    z-index: 1;
+    width: 9100px;
+    height: 400px;
+    background: gray;
+}
+
+#list img {
+    float: left;
+    width: 1300px;
+    height: 400px;
+}
+
+#buttons {
+    position: absolute;
+    left: 250px;
+    bottom: 20px;
+    z-index: 2;
+    height: 10px;
+    width: 100px;
+}
+
+#buttons span {
+    float: left;
+    margin-right: 5px;
+    width: 10px;
+    height: 10px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    background: #333;
+    cursor: pointer;
+}
+
+#buttons .on {
+    background: orangered;
+}
+
+.arrow {
+    position: absolute;
+    top: 180px;
+    z-index: 2;
+    display: none;
+    width: 40px;
+    height: 40px;
+    font-size: 36px;
+    font-weight: bold;
+    line-height: 39px;
+    text-align: center;
+    color: #fff;
+    background-color: RGBA(0, 0, 0, .3);
+    cursor: pointer;
+}
+
+.arrow:hover {
+    background-color: RGBA(0, 0, 0, .7);
+}
+
+#container:hover .arrow {
+    display: block;
+}
+
+#prev {
+    left: 20px;
+}
+
+#next {
+    right: 20px;
 }
 /* 联系我部分 */
 .chatme {
@@ -188,9 +259,10 @@ p {
 .sidebar {
 	width: 160px;
 	height: 180px;
-	position: fixed;
-	top: 50%;
+	position: relative;
+	bottom: 350px;
 	margin-top: -90px;
+	z-index: 2;
 }
 
 .subnav {
@@ -208,7 +280,7 @@ p {
 .subnav:hover ul{
 	display: block;
 }
-.subnav ul{
+.subnav ul {
 	width: 160px;
 	height: auto;
 	display: none;
