兼容性测试并做修改

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,6 +8,9 @@ body {
 	min-height: 1000px;
 	overflow-x: hidden;
 }
+img{
+	border: none;
+}
 /* 链接样式 */
 a {
 	color: #933;
@@ -23,7 +26,7 @@ a {
 .logo {
 	margin-top: 30px;
 	position: relative;
-	left: 153px;
+	left: 15%;
 	width: 30%;
 	font-size: 30px;
 	float: left;
@@ -31,18 +34,19 @@ a {
 /* 头部右边菜单部分 */
 .menu {
 	float: right;
+	width: 30%;
 	overflow: hidden;
 }
 .menu ul {
 	margin-right: 50px;
-	width: 320px;
 	height: 100px;	
 }
 .menu ul li {
 	font-size: 20px;
 	font-family: "微软雅黑";
+	text-align: center;
 	float: right;
-	width: 80px;
+	width: 25%;
 	line-height: 100px;
 	text-align: center;
 	font-weight: bold;
@@ -71,10 +75,10 @@ a {
 	font-weight: bold;
 }
 #container {
-        position: relative;
-        width: 1300px;
-        height: 400px;
-        overflow: hidden;
+    position: relative;
+    width: 1300px;
+    height: 400px;
+    overflow: hidden;
     }
 #list {
     position: absolute;
@@ -92,7 +96,7 @@ a {
 
 #buttons {
     position: absolute;
-    left: 250px;
+    left: 50%;
     bottom: 20px;
     z-index: 2;
     height: 10px;
@@ -341,7 +345,7 @@ p {
 	color: #fff;
 	font-family: "微软雅黑";
 	font-size: 15px;
-	background-color: #292c35;
+	background: #292c35;
 	text-align: center;
 	line-height: 100px;
 }
